[package]
name = "saloon"
version = "0.1.0"
edition = "2021"
authors = ["Said Rodrigues <coderflemis@gmail.com"]
description = "A Rust implementation of an Edge Distributed Database"
repository = "https://github.com/taldoflemis/saloon"
readme = "README.md"
license = "MIT"

[dependencies]
anyhow = "1.0.86"
bytes = "1.6.0"
prost = "0.12.6"
prost-types = "0.12.6"
sqlite = "0.36.0"
thiserror = "1.0.61"

[build-dependencies]
prost-build = "0.12.6"
