[package]
name = "saloon"
version = "0.1.0"
edition = "2021"
authors = ["Said Rodrigues <coderflemis@gmail.com"]
description = "A Rust implementation of an Edge Distributed Database"
repository = "https://github.com/taldoflemis/saloon"
readme = "README.md"
license = "MIT"

[dependencies]
anyhow = "1.0.86"
bytes = "1.6.0"
prost = "0.12.6"
prost-types = "0.12.6"
sqlite = "0.36.0"
thiserror = "1.0.61"
uuid = { version = "1.8.0", features = ["v4"] }
tonic = { version = "0.11.0" }
tokio = { version = "1.38.0", features = ["full"] }
tokio-macros = { version = "2.3.0" }
serde-aux = "4.5.0"
serde = { version = "1.0.214", features = ["derive"] }
config = { version = "0.14.1", features = ["yaml"] }

[build-dependencies]
tonic-build = "0.11.0"
